--- a/product.html
+++ b/product.html
@@ -48,8 +48,8 @@
             <p class="order-tracker">Order Tracking</p>
         </div>
         <div class="middle-header">
-            <a href=""><img class="logo-grogin" src="/icons/grogin-logo-dark.png.svg" alt="" /></a>
-            <img class="location" src="/icons/location.svg" alt="" />
+            <a href=""><img class="logo-grogin" src="icons/grogin-logo-dark.png.svg" alt="" /></a>
+            <img class="location" src="icons/location.svg" alt="" />
             <div>
                 <p class="location-p">Deliver to</p>
                 <p class="location-p-two">all</p>
